test/mock/plugins/invalid/invalid-methods-missing.js
module.exports = {
  service: 'lambda',
  method: {
    foo: {
      request: async () => {},
    },
  },
}
